--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body{
         .menu-bar ul li a{
             width: 11px;
             text-decoration: none;
-            color: aliceblue;
+            color: rgb(20, 36, 49);
             font-size: 20px;
         }
 
@@ -117,7 +117,7 @@ body{
             border: 2px solid rgb(168, 162, 162);
         }
         .Post ul li a{
-            color: aliceblue;
+            color: rgb(0, 136, 255);
             /* padding-top: 50px; */
         }
         .menu-bar ul li:hover .Post{
@@ -125,15 +125,15 @@ body{
             position: absolute;
             background: transparent;
             margin-top: 5px;
-            margin-left: -120px;
-            
+            margin-left: -100px;
+            backdrop-filter: blur(550px);
         }
         .menu-bar ul li:hover .Post ul{
             display: block;
             margin: 10px;
         }
         .menu-bar ul li:hover .Post ul li{
-            width: 150px;
+            width: 120px;
             padding: 20px;
             margin-top: none;
             background: transparent;
@@ -145,28 +145,29 @@ body{
             border-bottom: none;
         }
         .menu-bar ul li:hover .Post ul li a:hover{
-            color: lightgreen;
+            color: rgb(217, 218, 217);
         }
 
 
         /* person */
         .Person{
             display: none;
-            backdrop-filter: blur(1050px);
+            backdrop-filter: blur(2000px);
             background: #fff;
             border-radius: 8px;
             height: 200px;
             border: 2px solid rgb(168, 162, 162);
         }
         .Person ul li a{
-            color: #fff;
+            color: #0059ff;
         }
         .Post ul li:hover .Person{
             display: block;
             position: absolute;
             background: transparent;
-            margin-top: 15px;
-            margin-left: -300px;
+            margin-top: 110px;
+            margin-left: -200px;
+            
         }
         .Post ul li:hover .Person ul{
             display: block;
@@ -184,7 +185,7 @@ body{
             border-bottom: none;
         }
         .Post ul li:hover .Person ul li a:hover{
-            color: lightgreen;
+            color: rgb(223, 223, 223);
         }
 
 
@@ -201,14 +202,14 @@ body{
             border: 2px solid rgb(168, 162, 162);
         }
         .King ul li a{
-            color: #fff;
+            color: #0077ff;
         }
         .Post ul li:hover .King{
             display: block;
             position: absolute;
             background: transparent;
-            margin-top: 30px;
-            margin-left: -300px;
+            margin-top: 90px;
+            margin-left: -200px;
         }
         .Post ul li:hover .King ul{
             display: block;
@@ -216,16 +217,17 @@ body{
         }
         .Post ul li:hover .King ul li{
             width: 250px;
-            padding: 10px;
+            padding: 20px;
             background: transparent;
             border-radius: 0;
             text-align: left;
+            align-items: center;
         }
         .Post ul li:hover .King ul li:last-child{
             border-bottom: none;
         }
         .Post ul li:hover .King ul li a:hover{
-            color: lightgreen;
+            color: rgb(220, 223, 220);
         }
 
 
@@ -242,14 +244,14 @@ body{
             border: 2px solid rgb(168, 162, 162);
         }
         .fan ul li a{
-            color: #fff;
+            color: #027add;
         }
         .Post ul li:hover .fan{
             display: block;
             position: absolute;
             background: transparent;
-            margin-top: 45px;
-            margin-left: -300px;
+            margin-top: 70px;
+            margin-left: -200px;
         }
         .Post ul li:hover .fan ul{
             display: block;
@@ -257,16 +259,17 @@ body{
         }
         .Post ul li:hover .fan ul li{
             width: 250px;
-            padding: 10px;
+            padding: 20px;
             background: transparent;
             border-radius: 0;
             text-align: left;
+            align-items: center;
         }
         .Post ul li:hover .fan ul li:last-child{
             border-bottom: none;
         }
         .Post ul li:hover .fan ul li a:hover{
-            color: lightgreen;
+            color: rgb(224, 224, 224);
         }
 
 
@@ -274,21 +277,21 @@ body{
         /* gait */
         .gait{
             display: none;
-            backdrop-filter: blur(1050px);
+            backdrop-filter: blur(5000px);
             background: #fff;
             border-radius: 8px;
             height: 200px;
             border: 2px solid rgb(168, 162, 162);
         }
         .gait ul li a{
-            color: #fff;
+            color: #0067dd;
         }
         .Post ul li:hover .gait{
             display: block;
             position: absolute;
             background: transparent;
-            margin-top: 60px;
-            margin-left: -300px;
+            margin-top: 50px;
+            margin-left: -200px;
         }
         .Post ul li:hover .gait ul{
             display: block;
@@ -296,16 +299,17 @@ body{
         }
         .Post ul li:hover .gait ul li{
             width: 250px;
-            padding: 10px;
+            padding: 20px;
             background: transparent;
             border-radius: 0;
             text-align: left;
+            align-items: center;
         }
         .Post ul li:hover .gait ul li:last-child{
             border-bottom: none;
         }
         .Post ul li:hover .gait ul li a:hover{
-            color: lightgreen;
+            color: rgb(238, 238, 238);
         }
 
 
