--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ body{
             <i class="fa-brands fa-facebook-f"></i>
             </a>
     </div>
-    <a href="https://mkmuslim-777.github.io/test/" class="btn">Registation</a>
+    <a href="https://mkmuslim-777.github.io/Registation/" class="btn">Registation</a>
    </section>
 
 
